--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "scroll": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
